@@ -17,7 +17,7 @@
   <key>CFBundleSignature</key>
   <string>opsi</string>
   <key>CFBundleShortVersionString</key>
-  <string>4.1.0.0</string>
+  <string>4.1.0.1</string>
   <key>CFBundleVersion</key>
   <string>1</string>
   <key>CSResourcesFileMapped</key>
