@@ -13,7 +13,7 @@
   <key>CFBundleName</key>
   <string>opsi-script</string>
   <key>CFBundleShortVersionString</key>
-  <string>4.12.3.11</string>
+  <string>4.12.3.13</string>
   <key>CFBundleIconFile</key>
   <string>opsi.icns</string>
   <key>CFBundleVersion</key>
