@@ -13,7 +13,7 @@
   <key>CFBundleName</key>
   <string>opsi-script-nogui</string>
   <key>CFBundleShortVersionString</key>
-  <string>4.12.3.11</string>
+  <string>4.12.3.13</string>
   <key>CFBundleVersion</key>
   <string>1</string>
   <key>CFBundleSupportedPlatforms</key>
