@@ -5,6 +5,12 @@ mac getIpByName liefert name von IPnum
 
 
 ##################################################################
+opsi-winst/opsi-script (4.12.3.13) experimental; urgency=low
+
+  * macos: depot path: /media/opsi_depot
+
+-- Detlef Oertel <d.oertel@uib.de>  thu, 12 Mar 2020:15:00:00 +0200
+
 opsi-winst/opsi-script (4.12.3.12) experimental; urgency=low
 
   * osmain: /batch + / productid (template+with admin):
